infra/k8s-min/api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: events-api
spec:
  selector:
    app: events-api
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  type: ClusterIP
