infra/k8s-min/frontend-svc-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: events-frontend-lb
spec:
  selector:
    app: events-frontend
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: LoadBalancer
